# clustering-triplets-with-tangles

./: .gitignore  .gitmodules  Dockerfile  README.md  baselines.py  comparison_hc.py  data-generation.py  data_generation.py  datasets.py  environment-mac.yml  environment.yml  estimators.py  exp_imputation.py  exp_noise_agreement.py  exp_noise_investigation.py  exp_questionnaire_equivalence.py  exp_real_world_data.py  exp_smb.py  exp_vary_all.py  experiment_runner.py  hierarchies.py  imagenet_class_mapping.py  imputation.py  parameter_variation.py  parameters.yaml  plotting.py  profiling.py  questionnaire.py  requirements.txt  thesis.py  thesis_real_data.ipynb  thesis_simulations.ipynb  triplets.py  utils.py
configurations/: 01-tangle-algorithm-crashes.yaml  02-small-clusters.yaml  03-totally-random-clusters.yaml  06-base-config.yaml  07-performance-improvements.yaml  08-imputation-base.yaml  10-noise-agreement.yaml
experiments/: 01-tangle-algorithm-crashes.yaml  02-small-clusters.yaml  03-totally-random-clusters.yaml  04-sparse-clusters.yaml  05-sparse-clusters-big.yaml  06-base-config.yaml  06_parameter_variation.py  08-imputation-base.yaml  09-noise-investigation.yaml  09_noise_investigation.py  10_real_world_data.py  10_sklearn_data.py  11-questionnaire-equiv.yaml  11_questionnaire_equivalence.py  12_stochastic_block_models.ipynb  13_rust_backend.py  14_mindset_datasets.ipynb  15_mindset_datasets.ipynb  15_real_world_data.ipynb  16_majority_neighbour_cuts.ipynb  (+16 more)
tangles-rust/: Cargo.toml  README.md
tangles-rust/src/: cuts.rs  lib.rs  main.rs  tangles.rs
(+25 files in other folders)
